[gd_scene load_steps=17 format=1]

[ext_resource path="res://scripts/spring.gd" type="Script" id=1]
[ext_resource path="res://sprites/mechs/chainN.png" type="Texture" id=2]
[ext_resource path="res://sprites/ui/hud_x35.png" type="Texture" id=3]
[ext_resource path="res://scripts/springKG.gd" type="Script" id=4]
[ext_resource path="res://sprites/mechs/KG.png" type="Texture" id=5]
[ext_resource path="res://sprites/ui/hud_gem_green.png" type="Texture" id=6]
[ext_resource path="res://sprites/ui/hud_gem_blue.png" type="Texture" id=7]
[ext_resource path="res://tscns/mechs/rope.tscn" type="PackedScene" id=8]

[sub_resource type="ConvexPolygonShape2D" id=1]

custom_solver_bias = 0.0
points = Vector2Array( -0.817131, 45.9713, -31.259, 14.8159, -51.2365, -17.2908, 49.3644, -17.5286, 29.1491, 15.2915 )

[sub_resource type="ConvexPolygonShape2D" id=2]

custom_solver_bias = 0.0
points = Vector2Array( -51.4743, 3.87584, -51.2365, -17.2908, -31.259, 14.8159 )

[sub_resource type="ConvexPolygonShape2D" id=3]

custom_solver_bias = 0.0
points = Vector2Array( 49.3644, 3.87584, 29.1491, 15.2915, 49.3644, -17.5286 )

[sub_resource type="ConvexPolygonShape2D" id=4]

custom_solver_bias = 0.0
points = Vector2Array( -0.545525, -73.4895, 13.3664, -53.4304, 70.632, 50.7476, 70.632, 63.3655, 58.9848, 75.9833, -60.3994, 75.9833, -65.2524, 73.7186, -71.3995, 53.0124, -70.4289, 46.2181, -15.1046, -53.4304 )

[sub_resource type="ConvexPolygonShape2D" id=5]

custom_solver_bias = 0.0
points = Vector2Array( -70.1054, 69.1891, -71.3995, 62.0713, -71.3995, 53.0124, -65.2524, 73.7186 )

[sub_resource type="ConvexPolygonShape2D" id=6]

custom_solver_bias = 0.0
points = Vector2Array( 48.3081, -48.9009, 51.867, -40.489, 70.632, 50.7476, 13.3664, -53.4304, 38.9257, -54.0775 )

[sub_resource type="ConvexPolygonShape2D" id=7]

custom_solver_bias = 0.0
points = Vector2Array( 63.8378, 74.3656, 58.9848, 75.9833, 70.632, 63.3655, 67.7202, 69.1891 )

[sub_resource type="ConvexPolygonShape2D" id=8]

custom_solver_bias = 0.0
points = Vector2Array( -47.458, -51.1656, -40.3402, -53.4304, -15.1046, -53.4304, -70.4289, 46.2181, -53.6051, -37.9008, -51.0169, -46.9597 )

[node name="Spring" type="Node2D"]

transform/pos = Vector2( 376.853, 111.332 )
script/script = ExtResource( 1 )
__meta__ = { "__editor_plugin_screen__":"2D" }

[node name="Hollder" type="StaticBody2D" parent="."]

transform/pos = Vector2( 1, -91 )
z/z = 1
input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, -7.62939e-06, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 2 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, -7.62939e-06, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 3 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, -7.62939e-06, 0 )
shapes/2/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = { "_editor_collapsed":true }

[node name="Sprite" type="Sprite" parent="Hollder"]

transform/pos = Vector2( -1.13672, 13.8013 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="Hollder"]

transform/pos = Vector2( -7.62939e-06, 0 )
build_mode = 0
polygon = Vector2Array( 49.3644, -17.5286, 49.3644, 3.87584, 29.1491, 15.2915, -0.817131, 45.9713, -31.259, 14.8159, -51.4743, 3.87584, -51.2365, -17.2908 )
shape_range = Vector2( -1, -1 )
trigger = false

[node name="Button" type="Button" parent="Hollder"]

margin/left = -25.0
margin/top = -21.0
margin/right = 26.0
margin/bottom = 22.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 3 )
flat = true

[node name="KG" type="RigidBody2D" parent="."]

transform/pos = Vector2( -0.440094, 343.76 )
input/pickable = false
shapes/0/shape = SubResource( 4 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0.716988, 0 )
shapes/0/trigger = false
shapes/1/shape = SubResource( 5 )
shapes/1/transform = Matrix32( 1, 0, 0, 1, 0.716988, 0 )
shapes/1/trigger = false
shapes/2/shape = SubResource( 6 )
shapes/2/transform = Matrix32( 1, 0, 0, 1, 0.716988, 0 )
shapes/2/trigger = false
shapes/3/shape = SubResource( 7 )
shapes/3/transform = Matrix32( 1, 0, 0, 1, 0.716988, 0 )
shapes/3/trigger = false
shapes/4/shape = SubResource( 8 )
shapes/4/transform = Matrix32( 1, 0, 0, 1, 0.716988, 0 )
shapes/4/trigger = false
collision/layers = 1
collision/mask = 1
mode = 0
mass = 1.0
friction = 1.0
bounce = 0.0
gravity_scale = 1.0
custom_integrator = false
continuous_cd = 0
contacts_reported = 0
contact_monitor = false
sleeping = false
can_sleep = true
velocity/linear = Vector2( 0, 0 )
velocity/angular = 0.0
damp_override/linear = -1.0
damp_override/angular = -1.0
script/script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="KG"]

texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionPolygon2D" parent="KG"]

transform/pos = Vector2( 0.716988, 0 )
build_mode = 0
polygon = Vector2Array( 38.9257, -54.0775, 13.3664, -53.4304, -0.545525, -73.4895, -15.1046, -53.4304, -40.3402, -53.4304, -47.458, -51.1656, -51.0169, -46.9597, -53.6051, -37.9008, -70.4289, 46.2181, -71.3995, 53.0124, -71.3995, 62.0713, -70.1054, 69.1891, -65.2524, 73.7186, -60.3994, 75.9833, 58.9848, 75.9833, 63.8378, 74.3656, 67.7202, 69.1891, 70.632, 63.3655, 70.632, 50.7476, 51.867, -40.489, 48.3081, -48.9009 )
shape_range = Vector2( -1, -1 )
trigger = false

[node name="Button" type="Button" parent="KG"]

margin/left = -28.0
margin/top = 14.0
margin/right = 23.0
margin/bottom = 57.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 3 )
flat = true

[node name="Button1" type="Button" parent="KG"]

margin/left = -57.0
margin/top = -36.0
margin/right = 5.0
margin/bottom = 8.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 6 )
flat = true

[node name="Camera2D" type="Camera2D" parent="KG"]

anchor_mode = 1
rotating = false
current = false
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.0
drag_margin/top = 0.0
drag_margin/right = 0.0
drag_margin/bottom = 0.0

[node name="Position2D" type="Position2D" parent="KG"]

transform/pos = Vector2( 89, 62 )

[node name="Button2" type="Button" parent="KG"]

margin/left = -1.0
margin/top = -38.0
margin/right = 61.0
margin/bottom = 6.0
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
toggle_mode = false
icon = ExtResource( 7 )
flat = true

[node name="PJHA" type="PinJoint2D" parent="."]

transform/pos = Vector2( 0, -67 )
z/z = 1
node_a = NodePath("../Hollder")
node_b = NodePath("../Rope/RopeA")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="PJFKG" type="PinJoint2D" parent="."]

transform/pos = Vector2( 0, 277.663 )
node_a = NodePath("../Rope/RopeF")
node_b = NodePath("../KG")
bias/bias = 0.0
collision/exclude_nodes = true
softness = 0.0

[node name="Rope" parent="." instance=ExtResource( 8 )]

transform/pos = Vector2( -0.147003, -0.667999 )

[connection signal="pressed" from="Hollder/Button" to="." method="_on_Button"]

[connection signal="pressed" from="KG/Button" to="." method="_on_Button"]

[connection signal="pressed" from="KG/Button1" to="KG" method="_on_edit"]

[connection signal="pressed" from="KG/Button2" to="KG" method="on_info"]


